--- a/portfolio.html
+++ b/portfolio.html
@@ -179,7 +179,7 @@
                   <a href="" class="link-meta hero-page link">
                     <div class="hero-page-images">
                       <img src="./images/img9-1.jpg" alt="Додаток" width="370" height="294">
-                      <div class="hero-ovarlay">
+                      <div class="hero-overlay">
                         <p class="hero-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                       </div>
                     </div>
