--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="page-navigation">
           <a href="./index.html" class="logo">Web<span>Studio</span></a>
           <ul class="nav list">
-            <li><a href="" class="curent">Студія</a></li>
+            <li><a href="" class="studio-curent">Студія</a></li>
             <li><a href="./portfolio.html">Портфоліо</a></li>
             <li><a href="">Контакти</a></li>
           </ul>
