--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
             <a href="./index.html" class="logo">Web<span>Studio</span></a>
             <ul class="nav list">
                 <li><a href="./index.html">Студія</a></li>
-                <li><a href="" class="curent">Портфоліо</a></li>
+                <li><a href="" class="portfolio-curent">Портфоліо</a></li>
                 <li><a href="">Контакти</a></li>
             </ul>
           </nav>
